# stytsch

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
installer/: install.ps1  stytsch.json
scripts/: stytsch.lua
src/: config.rs  db.rs  main.rs  schema.rs  search.rs  tests.rs  tui.rs
tests/: cli_test.sh
